removed yarn.lock, added getCursor command as test for inserting code into other text documents

--- a/package.json
+++ b/package.json
@@ -77,6 +77,10 @@
             {
                 "command": "extension.clearEntries",
                 "title": "Clear"
+            },
+            {
+                "command": "extension.getCursor",
+                "title": "Get Cursor"
             }
         ],
         "views": {
