moved treeview code to own file called headerTitles.ts for better code organization, removed '/t'and replaced with spaces in generated code as '\t' causes issues with the cobol encoding, updated readme

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
                     },
                     "cobolprettyheaders.setPrintOutputField": {
                         "type": "string",
-                        "default": "output",
+                        "default": "PRINT-OUTPUT",
                         "description": "Set the name of the output for the header write procedure, default is set to 'output'"
                     },
                     "cobolprettyheaders.setHeaderNames": {
