replaced treeview clear functions with singular function, added generated code preview that appears in the console, removed preview from text file, fixed treeview getWriteProcedureTitle as it was causing the extension to crash, added reference variable for activeTextEditorso the user doesn't need to click on the text file before running commands, updated ReadMe

--- a/package.json
+++ b/package.json
@@ -113,7 +113,8 @@
             "explorer": [
                 {
                     "id": "headerview",
-                    "name": "Header Titles"
+                    "name": "Header Titles",
+                    "when": "ext:isVisable"
                 }
             ]
         },
